# social-identity-solana

./: Anchor.toml  README.md  package.json
app/: add.js  delete.js  edit.js  editUrl.js  gpa.js  initialise.js
programs/social-identity/: Cargo.toml
programs/social-identity/src/: lib.rs
